[project]
name = "WSGIBump"
dynamic = ["version"]
description = "A simple WSGI app that counts the number of requests to it, a visitor count perchance"
readme = "README.md"
license = {file = "LICENSE"}

# [project.urls]
# Homepage = "https://github.com/jb2170/WSGIBump/"

[tool.setuptools.dynamic]
version = {attr = "WSGIBump.__version__"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
